# ircalculator

./: LICENSE  README.md  pyproject.toml
src/ircalculator/: calculator.py
