[project]
name = "ircalculator"
version = "0.0.1"
authors = [
  { name="Víctor Arnelas", email="arrecio@gmail.com" },
]
description = "Simple gain-lost irating calculator."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"