[project]
name = "ircalculator"
version = "0.0.1"
authors = [
  { name="Víctor Arnelas", email="arrecio@gmail.com" },
]
description = "Simple gain-lost irating calculator."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/arrecio/ircalculator/"
Issues = "https://github.com/arrecio/ircalculator/issues"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]